# swagger/swagger.json
@@ -36,6 +36,60 @@
         }
       }
     },
+    "/instagram": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "produces": [ "application/json" ],
+        "parameters": [
+          {
+            "name": "access_token",
+            "in": "body",
+            "description": "facebook access_token",
+            "type": "string",
+            "required": true
+          }],
+        "responses": {
+          "200": {
+            "description": "User data",
+            "examples": {
+              "data": {"user": "user data" }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/google": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "produces": [ "application/json" ],
+        "parameters": [
+          {
+            "name": "access_token",
+            "in": "body",
+            "description": "facebook access_token",
+            "type": "string",
+            "required": true
+          }],
+        "responses": {
+          "200": {
+            "description": "User data",
+            "examples": {
+              "data": {"user": "user data" }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/validate_auth_token": {
       "post": {
         "tags": [
@@ -125,7 +179,7 @@
         "parameters": [
           {
             "name": "id",
-            "in": "body",
+            "in": "query",
             "description": "id of social account",
             "type": "string",
             "example": "32545223563474356",
@@ -133,7 +187,7 @@
           },
           {
             "name": "provider",
-            "in": "body",
+            "in": "query",
             "description": "user provider",
             "type": "string",
             "example": "facebook",
